fix Add flex 1 to containers
Remove 100vh and overflow hidden and add min-height 100 so there is
no extra spacing
Add flexbox 1 to content containers to fill up the whole page
Add footer container and add style to complete this layout

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,9 +7,7 @@
 body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  border: 1px solid red;
-  overflow: hidden;
+  min-height: 100vh;
 }
 
 .container-1 {
@@ -40,6 +38,8 @@ ul, a
   display: flex;
   justify-content: center;
   align-items: center;
+  flex: 1;
+  padding: 50px 0;
   background: #1F2937;
   gap: 15px;
 }
@@ -83,10 +83,13 @@ button {
 
 .container-3 {
   flex-direction: column;
+  flex: 1;
+  padding: 50px 0;
+  gap: 30px;
 }
 
 .container-boxes {
-  gap: 10px;
+  gap: 50px;
 }
 
 h2 {
@@ -110,7 +113,10 @@ h2 {
 .container-4 {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex: 1;
+  padding: 50px 0;
   background: #E5E7EB;
 }
 
@@ -130,7 +136,9 @@ h2 {
 .container-5 {
   display: flex;
   justify-content: center;
-  background: lightpink;
+  align-items: center;
+  flex: 1;
+  padding: 50px 0;
 }
 
 .call-to-action.container {
@@ -154,4 +162,13 @@ h2 {
   font-weight: 700;
   padding: 10px 30px;
   cursor: pointer;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #1F2937;
+  color: white;
+  height: 75px;
 }
